--- a/src/PassGuard.Core/PassGuard.Core.csproj
+++ b/src/PassGuard.Core/PassGuard.Core.csproj
@@ -6,4 +6,8 @@
         <Nullable>disable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\PassGuard.Shared\PassGuard.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
